# pytest-course

./: .dockerignore  .gitignore  .pylintrc  DockerFile  README.md  conftest.py  fixtures.py  hello.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  django.yml
api/coronavstech/companies/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/coronavstech/companies/migrations/: 0001_initial.py
api/coronavstech/companies/tests/: test_api.py  test_emails.py  test_server_api.py
api/coronavstech/coronavstech/: asgi.py  settings.py  urls.py  wsgi.py
fibonacci/: cached.py  conftest.py  dynamic.py  naive.py
fibonacci/tests/: test_fibonacci.py  test_performance.py
